Get basestatistics method added + open API object.
